Dialog title alignment and iframe size fixes
Changes:

* Make all window iframes (not just modal ones) expand to fill their
  parent div, which is where sizing is actually applied
* Fix broken selector (can't start with ">")
* Reduce padding around ProcessDialog title to correct alignment

--- a/src/styles/Window.less
+++ b/src/styles/Window.less
@@ -3,7 +3,7 @@
 .oo-ui-window {
 	line-height: 1em;
 
-	> &-frame {
+	& > &-frame {
 		.oo-ui-box-sizing(border-box);
 
 		 > .oo-ui-frame {
