--- a/src/styles/WindowManager.less
+++ b/src/styles/WindowManager.less
@@ -22,11 +22,6 @@
 				overflow: hidden;
 				max-width: 100%;
 				max-height: 100%;
-
-				.oo-ui-frame {
-					width: 100%;
-					height: 100%;
-				}
 			}
 		}
 	}
