--- a/src/themes/apex/dialogs/ProcessDialog.less
+++ b/src/themes/apex/dialogs/ProcessDialog.less
@@ -17,7 +17,7 @@
 	}
 
 	&-location {
-		padding: 0.75em 0;
+		padding: 0.25em 0;
 		height: 1.9em;
 		cursor: default;
 		text-align: center;
